# bydesigns-db

./: .dockerignore  .gitignore  .gitleaks.toml  CLAUDE.md  CNAME  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE  README.md  ROADMAP-BACKLOG.md  index.html
.claude/: settings.json
.claude/hooks/: complexity.sh  quality.sh  security.sh
.claude/projects/-Users-baita-artotel-Development-bihaviour-twill-db/memory/: MEMORY.md  engine-server-churn-registry-race.md  phase5-composition-branch-status.md
.claude/rules/: git-workflow.md  rust.md  security.md  storage-seam.md  testing.md
.claude/skills/gh/: SKILL.md
.claude/skills/release/: SKILL.md
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: bench-validation.yml  ci.yml  codeql.yml  dependabot-bun-lockfile.yml  pages.yml  release-cli.yml
clients/bun/: package.json  tsconfig.json
clients/bun/examples/: auth-app.ts  compose.ts  duckdb-olap.ts  notes.ts  vector-memory.ts
clients/bun/scripts/: build-npm-packages.ts  sync-version.ts
clients/bun/src/: better-auth.ts  ffi.ts  index.ts  olap.ts
clients/bun/test/: better-auth.test.ts  embedded.test.ts  olap.test.ts  vector.test.ts
clients/node/: .gitignore  README.md  package.json  tsconfig.json
clients/node/examples/: astro-endpoint.ts  nextjs-route.ts  notes.ts
clients/node/src/: ffi.ts  index.ts
clients/node/test/: embedded.test.ts
clients/php/: README.md  composer.json
clients/php/examples/: notes.php  server-pdo.php
clients/php/src/: Database.php  Engine.php  EngineError.php  Statement.php  autoload.php
clients/php/test/: embedded_test.php
crates/bench/: Cargo.toml  README.md  workload.example.yaml
crates/bench/src/: analysis.rs  boundary.rs  burst.rs  compare.rs  correctness.rs  hist.rs  lib.rs  lifecycle.rs  longrun.rs  main.rs  pgclient.rs  profile.rs  sweep.rs  workload.rs
crates/bench/tests/: custom_profile.rs  pgwire.rs  scenarios.rs  validation.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  prompt.rs  scaffold.rs
crates/cli/src/manage/: branch.rs  gentypes.rs  migrate.rs  mod.rs  render.rs  schema.rs  wire.rs
crates/cli/templates/bun/: README.md.tmpl  app.ts.tmpl  package.json.tmpl  tsconfig.json.tmpl  vectors.ts.tmpl
crates/cli/templates/node/: README.md.tmpl  app.ts.tmpl  package.json.tmpl  tsconfig.json.tmpl  vectors.ts.tmpl
crates/cli/templates/php/: README.md.tmpl  composer.json.tmpl  gitignore.tmpl  index.php.tmpl  vectors.php.tmpl
crates/cli/tests/: manage.rs  scaffold.rs  wizard.rs
crates/controller/: Cargo.toml
crates/controller/src/: lib.rs  tests.rs
crates/engine/: Cargo.toml
crates/engine/include/: engine.h
crates/engine/src/: catalog.rs  conn.rs  datetime.rs  db.rs  error.rs  exec.rs  ffi.rs  group_commit.rs  json.rs  lex.rs  lib.rs  session.rs  sql.rs  store.rs  value.rs  vector.rs  wal.rs
crates/engine/tests/: constraints_6d.rs  dialect_6e.rs  engine.rs  expr_6a.rs  ffi.rs  functions_6c.rs  group_commit.rs  hot_row.rs  relational_6b.rs  rls_branching.rs  rls_core.rs  rls_write.rs  vector.rs
crates/server/: Cargo.toml
crates/server/src/: capability.rs  datapath.rs  introspect.rs  lib.rs  main.rs  metrics.rs  protocol.rs  reflect.rs  session.rs  types.rs
crates/server/tests/: metrics.rs  pgwire_subset.rs  wire.rs
crates/storage/: Cargo.toml
crates/storage/src/: branch.rs  conformance.rs  lib.rs  local.rs  types.rs
crates/storage/src/object/: binding.rs  codec.rs  fault.rs  fs.rs  mem.rs  mod.rs  store.rs
crates/storage/tests/: branching.rs  conformance.rs  crash_safety.rs  object_storage.rs  stats.rs
deploy/pooler/: README.md  pgbouncer.ini  pgcat.toml
docs/: PHASE1.md  PHASE2.md  PHASE3.md  PHASE4.md  PHASE5.md
packaging/homebrew/: README.md  twilldb.rb
packaging/observability/: README.md  docker-compose.yml  prometheus.yml
packaging/observability/grafana/dashboards/: twilldb.json
packaging/observability/grafana/provisioning/dashboards/: dashboard.yml
packaging/observability/grafana/provisioning/datasources/: datasource.yml
pages/: index.html  llms.txt
pages/assets/: app.css  app.js  docs-section.js  specs-section.js
pages/author/: index.html
pages/changelog/: index.html
pages/docs/: add-to-project.html  architecture.html  auth.html  branching.html  c-abi.html  connect-bun.html  connect-embedded-bun.html  connect-embedded-elysia.html  connect-embedded-hono.html  connect-embedded-nextjs.html  connect-embedded-node.html  connect-embedded-php.html  connect-embedded.html  connect-postgres.html  connect-server-drizzle.html  connect-server-go.html  connect-server-node.html  connect-server-postgrest.html  connect-server-prisma.html  connect-server-python.html  connect-server.html  connect.html  connection-pooling.html  getting-started.html  hot-row.html  index.html  manage.html  olap.html  scaffolding.html  scale-to-zero.html  sql-reference.html  storage-file.html  storage-gs.html  storage-r2.html  storage-s3.html  storage.html
pages/release/: index.html
pages/specs/: 01-architecture-overview.html  02-engine-core.html  03-storage-interface.html  04-object-storage-backend.html  05-local-cache.html  06-lifecycle-controller.html  07-server-mode.html  08-bun-integration.html  09-benchmark-plan.html  10-hot-row-contention.html  11-deployment-targets.html  12-capabilities.html  13-roadmap.html  14-tradeoffs-risks.html  15-twill-bench.html  16-sql-compatibility.html  17-row-level-security.html  18-cli-tooling.html  19-cli-management.html  20-client-runtimes.html  index.html  phase-1-embedded.html  phase-2-object-storage.html  phase-3-server.html  phase-4-branching-lifecycle.html  phase-5-capabilities.html  phase-6-sql-completeness.html
specs/: 01-architecture-overview.html  02-engine-core.html  03-storage-interface.html  04-object-storage-backend.html  05-local-cache.html  06-lifecycle-controller.html  07-server-mode.html  08-bun-integration.html  09-benchmark-plan.html  10-hot-row-contention.html  11-deployment-targets.html  12-capabilities.html  13-roadmap.html  14-tradeoffs-risks.html  index.html
specs/assets/: spec.css  spec.js
