[workspace]
resolver = "2"
members = [
    "crates/storage",
    "crates/engine",
    "crates/server",
    "crates/controller",
    "crates/bench",
    "crates/cli",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/bihaviour/twill-db"
rust-version = "1.80"

[workspace.dependencies]
async-trait = "0.1"
thiserror = "2"

# Build the engine artifacts unoptimized-but-fast for the demo/test loop,
# and fully optimized for release distribution of libengine.*
[profile.release]
opt-level = 3
lto = "thin"
