[package]
name = "twill-bench"
description = "Embedded benchmark driver for the twill-db validation plan (spec 09): HDR-style percentile capture for the latency-floor, group-commit, and contention experiments."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "twill_bench"
path = "src/lib.rs"

[[bin]]
name = "twill-bench"
path = "src/main.rs"

[features]
# `custom` subcommand: the YAML workload-profile loader (issue #81). Gated so a
# default `twill-bench` build carries no profile-parsing code at all (#78
# guardrail 1 / spec 15: keep CLI-only concerns feature-gated). The parser is
# hand-rolled, so the feature adds no third-party dependency — the gate is the
# wall, demonstrated by the with/without-feature build matrix in CI.
custom-profile = []

[dependencies]
engine = { package = "twill-engine", path = "../engine" }
twill-server = { path = "../server" }
controller = { package = "twill-controller", path = "../controller" }
