[package]
name = "twilldb-cli"
description = "twilldb: project scaffolding for the Twill DB engine — generates a ready-to-run starter app for a chosen client (Phase 6 tooling)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# The scaffolder is deliberately dependency-free: it only writes files, so it
# hand-rolls arg parsing and placeholder substitution like the rest of the
# workspace (no clap, no template engine). Templates are embedded at compile
# time via `include_str!`, so the binary is self-contained and works offline.

[[bin]]
name = "twilldb"
path = "src/main.rs"

[lib]
name = "twilldb_cli"
path = "src/lib.rs"

[features]
# `manage` half (spec 19): the database *management* commands (sql / shell /
# tables / describe / migrate / gen types / seed / stats). Gated so a default
# `twilldb` build stays the lean, dependency-free scaffolder (spec 18) — the
# same wall `twill-bench`'s `custom-profile` feature uses. The feature links
# `twill-engine` and opens a real database over the embedded (`file://`/`s3://`)
# transport; the engine itself carries no heavy third-party deps, so even the
# management build stays auditable. CI builds both with and without the feature.
# `serve` (Milestone 2) wraps `engine-server`, so the feature additionally links
# `twill-server` — itself dependency-light (only the engine + a hand-rolled
# pgwire listener), so the wall it guards stays auditable.
manage = ["dep:engine", "dep:twill-server"]

[dependencies]
# Only pulled in by the `manage` feature; the default scaffolder links nothing.
engine = { package = "twill-engine", path = "../engine", optional = true }
twill-server = { path = "../server", optional = true }

[[test]]
name = "manage"
path = "tests/manage.rs"
required-features = ["manage"]
