[package]
name = "bydesigns-controller"
description = "Lifecycle controller: scale-to-zero engine instances, keep-warm, and thundering-herd admission (Phase 4)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "bydesigns_controller"
path = "src/lib.rs"

[dependencies]
bydesigns-engine = { path = "../engine" }
