[package]
name = "twill-controller"
description = "Lifecycle controller: scale-to-zero engine instances, keep-warm, and thundering-herd admission (Phase 4)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "twill_controller"
path = "src/lib.rs"

[dependencies]
twill-engine = { path = "../engine" }
