[package]
name = "twill-engine"
description = "The twill-db engine core: SQL frontend, MVCC, WAL, and the stable C ABI (libengine)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "engine"
# cdylib + staticlib for FFI consumers (bun:ffi / NAPI / static link);
# rlib so engine-server (Phase 3) can depend on the engine as a normal crate.
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
# WASM / Cloudflare-Workers port (EX-1 / #100, spec 11): a port, not a recompile
# — forks only the executor threading (via `twill-storage/wasm`), never the
# engine core, the storage seam, or the C ABI. Off by default.
wasm = ["twill-storage/wasm"]

[dependencies]
twill-storage = { path = "../storage" }
async-trait.workspace = true
thiserror.workspace = true

[dev-dependencies]
