[package]
name = "twill-server"
description = "engine-server: the twill-db engine wrapped in a Postgres-wire listener (Phase 3)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "engine-server"
path = "src/main.rs"

[lib]
name = "twill_server"
path = "src/lib.rs"

[dependencies]
twill-engine = { path = "../engine" }
