[package]
name = "twill-storage"
description = "The pluggable Storage trait (the seam) and the LocalFileStorage backend for twill-db."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "twill_storage"

[dependencies]
async-trait.workspace = true
thiserror.workspace = true

[dev-dependencies]
# block_on for driving the async trait from synchronous conformance tests
